--- a/home.html
+++ b/home.html
@@ -138,12 +138,12 @@
       </div>
 
       <div class="d-flex justify-content-between flex-wrap mt-3">
-        <img width="100px" src="image/asus.png" alt="" />
-        <img width="100px" src="image/asus.png" alt="" />
-        <img width="100px" src="image/asus.png" alt="" />
-        <img width="100px" src="image/asus.png" alt="" />
-        <img width="100px" src="image/asus.png" alt="" />
-        <img width="100px" src="image/asus.png" alt="" />
+        <img width="100px" src="image/asus.png" alt="brand-images" />
+        <img width="100px" src="image/asus.png" alt="brand-images" />
+        <img width="100px" src="image/asus.png" alt="brand-images" />
+        <img width="100px" src="image/asus.png" alt="brand-images" />
+        <img width="100px" src="image/asus.png" alt="brand-images" />
+        <img width="100px" src="image/asus.png" alt="brand-images" />
       </div>
 
       <div class="mt-4">
